--- a/app/manifest.json
+++ b/app/manifest.json
@@ -11,7 +11,7 @@
     "lang": "id-ID",
     "icons": [
         {
-            "src": "img/ncs.png",
+            "src": "img/h.png",
             "type": "image/png",
             "sizes": "144x144"
         }
